--- a/src/index.html
+++ b/src/index.html
@@ -13,22 +13,16 @@
       name="keywords"
       content="Travel, explore, cafe, outdoors, indoors, vibes, spots"
     />
-    <link rel="stylesheet" href="./pages/index.css" />
-    <link rel="icon" href="./favicon.ico" type="image/x-icon" />
   </head>
   <body class="page">
     <header class="header">
-      <img src="./images/Logo.svg" alt="header logo" class="header__logo" />
+      <img alt="header logo" class="header__logo" />
     </header>
     <main class="content">
       <!-- STARTING PROFILE PIC & DESCRIPTION -->
 
       <section class="profile page__section">
-        <img
-          src="./images/Avatar.svg"
-          alt="header avatar"
-          class="profile__avatar"
-        />
+        <img alt="header avatar" class="profile__avatar" />
         <div class="profile__column">
           <h1 class="profile__name">Bessie Coleman</h1>
           <p class="profile__description">
@@ -39,16 +33,12 @@
           <!-- EDIT PROFILE & NEW POST BUTTONS -->
 
           <button class="profile__edit-button" type="button">
-            <img src="./images/Pencil-icon.svg" alt="edit profile button" />
+            <img alt="edit profile button" />
             Edit Profile
           </button>
         </div>
         <button class="profile__post-button">
-          <img
-            src="./images/Plus-icon.svg"
-            alt="new post button"
-            class="profile__plus"
-          />New Post
+          <img alt="new post button" class="profile__plus" />New Post
         </button>
 
         <!-- STARTING CARD CONTAINER + LIKE BUTTON -->
@@ -175,8 +165,5 @@
         <div class="modal__caption">caption text</div>
       </div>
     </div>
-
-    <script src="./scripts/validation.js"></script>
-    <script src="./scripts/index.js"></script>
   </body>
 </html>
