--- a/src/index.html
+++ b/src/index.html
@@ -4,27 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sick Spots</title>
-
-    <meta
-      name="description"
-      content="Find the sickest spots around town for vibes"
-    />
-    <meta name="author" content="Britney Moncada" />
-    <meta
-      name="keywords"
-      content="Travel, explore, cafe, outdoors, indoors, vibes, spots"
-    />
   </head>
 
   <body class="page">
-    <!-- ========== HEADER ========== -->
     <header class="header">
-      <img class="header__logo" alt="header logo" />
+      <img class="header__logo" alt="Site logo" />
     </header>
 
-    <!-- ========== MAIN CONTENT ========== -->
     <main class="content page__content">
-      <!-- ====== PROFILE SECTION ====== -->
+      <!-- PROFILE -->
       <section class="profile page__section">
         <div class="profile__avatar-container">
           <img class="profile__avatar" alt="Profile avatar" />
@@ -40,56 +28,42 @@
           <p class="profile__description">Your description</p>
 
           <button class="profile__edit-button" type="button">
-            <img alt="profile edit icon" />
+            <img alt="Edit icon" />
             Edit Profile
           </button>
         </div>
 
         <button class="profile__post-button">
-          <img class="profile__plus" alt="new post button" />
+          <img class="profile__plus" alt="Add post" />
           New Post
         </button>
       </section>
 
-      <!-- ====== CARDS SECTION ====== -->
+      <!-- CARDS -->
       <section class="cards page__section">
         <ul class="cards__list">
           <template id="card-template">
             <li class="card">
-              <img class="card__image" src="#" alt="" />
-
-              <button
-                class="card__delete-btn"
-                type="button"
-                aria-label="delete card"
-              ></button>
-
-              <div class="card__caption">
+              <img class="card__image" alt="" />
+              <div class="card__info">
                 <h2 class="card__name"></h2>
-
-                <button
-                  class="card__like-button"
-                  type="button"
-                  aria-label="like button"
-                ></button>
+                <div class="card__like-container">
+                  <button class="card__like-button"></button>
+                </div>
               </div>
+              <button class="card__delete-btn"></button>
             </li>
           </template>
         </ul>
       </section>
     </main>
 
-    <!-- ========== FOOTER ========== -->
     <footer class="footer page__section">
       <p class="footer__text">2025 © Spots</p>
     </footer>
 
-    <!-- ========================================================= -->
-    <!-- ======================== MODALS ========================= -->
-    <!-- ========================================================= -->
-
-    <!-- ========== NEW POST MODAL ========== -->
-    <div class="modal" id="new-post-modal" aria-modal="true">
+    <!-- NEW POST MODAL -->
+    <div class="modal" id="new-post-modal">
       <div class="modal__container">
         <form class="modal__form">
           <div class="modal__form-header">
@@ -98,17 +72,17 @@
           </div>
 
           <div class="modal__inputs">
-            <label class="modal__label" for="url">Image link</label>
+            <label for="url" class="modal__input-label">Image link</label>
             <input
               id="url"
               class="modal__input"
               type="url"
               required
-              placeholder="Paste a link to the picture"
+              placeholder="Image URL"
             />
             <span class="url-error modal__input-error"></span>
 
-            <label class="modal__label" for="caption-text">Caption</label>
+            <label for="caption-text" class="modal__input-label">Caption</label>
             <input
               id="caption-text"
               class="modal__input"
@@ -116,7 +90,7 @@
               minlength="2"
               maxlength="30"
               required
-              placeholder="Type your caption"
+              placeholder="Caption"
             />
             <span class="caption-text-error modal__input-error"></span>
 
@@ -126,7 +100,7 @@
       </div>
     </div>
 
-    <!-- ========== EDIT PROFILE MODAL ========== -->
+    <!-- EDIT PROFILE MODAL -->
     <div class="modal" id="edit-profile-modal">
       <div class="modal__container">
         <form class="modal__form">
@@ -136,7 +110,7 @@
           </div>
 
           <div class="modal__inputs">
-            <label class="modal__label" for="edit-name">Name</label>
+            <label for="edit-name" class="modal__input-label">Name</label>
             <input
               id="edit-name"
               class="modal__input"
@@ -147,7 +121,7 @@
             />
             <span class="edit-name-error modal__input-error"></span>
 
-            <label class="modal__label" for="describe-yourself"
+            <label for="describe-yourself" class="modal__input-label"
               >Description</label
             >
             <input
@@ -166,25 +140,23 @@
       </div>
     </div>
 
-    <!-- ========== EDIT AVATAR MODAL ========== -->
+    <!-- EDIT AVATAR MODAL -->
     <div class="modal" id="edit-avatar-modal">
       <div class="modal__container">
         <form class="modal__form" id="edit-avatar-form">
           <div class="modal__form-header">
-            <div class="modal__header">Edit Profile Avatar</div>
+            <div class="modal__header">Edit Avatar</div>
             <button type="button" class="modal__close-button"></button>
           </div>
 
           <div class="modal__inputs">
-            <label class="modal__label" for="avatar-link"
-              >Profile picture</label
-            >
+            <label for="avatar-link">Profile picture</label>
             <input
               id="avatar-link"
               class="modal__input"
               type="url"
               required
-              placeholder="Image link"
+              placeholder="Image URL"
             />
             <span class="avatar-link-error modal__input-error"></span>
 
@@ -194,14 +166,12 @@
       </div>
     </div>
 
-    <!-- ========== DELETE CARD MODAL ========== -->
+    <!-- DELETE CONFIRMATION -->
     <div class="modal" id="delete-card-modal">
       <div class="modal__container modal__container_delete">
         <button class="modal__close-delete" type="button"></button>
 
-        <h3 class="modal__delete-title">
-          Are you sure you want to delete this image?
-        </h3>
+        <h3 class="modal__delete-title">Delete this image?</h3>
 
         <form class="modal__form modal__form_delete" id="delete-card-form">
           <button class="modal__delete-btn" type="submit">Delete</button>
@@ -210,12 +180,12 @@
       </div>
     </div>
 
-    <!-- ========== IMAGE PREVIEW MODAL ========== -->
+    <!-- IMAGE PREVIEW -->
     <div class="modal" id="modal__card-preview">
       <div class="modal__preview-container">
         <button class="modal__preview-close"></button>
-        <img class="modal__link" src="" alt="" />
-        <div class="modal__caption">Caption text</div>
+        <img class="modal__link" alt="" />
+        <div class="modal__caption"></div>
       </div>
     </div>
   </body>
